--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,14 @@ pipeline {
             }
         }
 
+        stage('Run GitLeaks') {
+            steps {
+                script {
+                    sh 'gitleaks detect --source=. --report-format=json --report-path=gitleaks_report.json' 
+                }
+            }
+        }
+
         stage('Terraform Lint') {
             steps {
                 script {
