--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,9 +27,8 @@ pipeline {
         stage('Terraform Lint') {
             steps {
                 script {
-                    // Ensure tflint is installed (you can add installation steps here if necessary)
-                    sh 'tflint --version'  // This will check if tflint is installed and its version
-                    sh 'tflint'  // Run tflint to lint your Terraform code
+                    sh 'tflint --version'
+                    sh 'tflint --module --debug'
                 }
             }
         }
