--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,8 @@ pipeline {
             steps {
                 script {
                     sh 'tflint --version'
-                    sh 'tflint --module --debug'
+                    sh 'tflint --module > tflint-log.txt 2>&1'
+                    sh 'cat tflint-log.txt'
                 }
             }
         }
