--- a/jenkinsfile
+++ b/jenkinsfile
@@ -84,7 +84,7 @@ pipeline {
             post {
                 success {
                     echo 'Terraform Apply was successful. Triggering next job.'
-                    build job: 'Install-Nginx', wait: false
+                    build job: 'Install_NGINX', wait: false
                 }
             }
         }
